# bqnn-benchmark

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
bqnn/: __init__.py  benchmark.py  classical_reference.py  data.py  inference.py  model.py  noise_models.py  quantization.py  sweeps.py  training.py
bqnn/utils/: __init__.py  metrics.py  plots.py  report.py
experiments/: __init__.py  exp_noise_threshold.py  exp_sweep_a.py  run_sweep.py  train_mnist_bqnn.py
tests/: README.md  __init__.py  test_data.py  test_metrics.py  test_model.py  test_ste.py  test_sweeps.py  test_training.py
