[project]
name = "bqnn-benchmark"
version = "0.2.1"
description = "Replicable benchmarking harness for tunable quantum neural networks"
authors = [
    { name = "Christopher Altman", email = "x@christopheraltman.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["quantum", "neural-network", "bqnn", "pennylane", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "pennylane>=0.33.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
qiskit = [
    "pennylane-qiskit>=0.33.0",
    "qiskit>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "bqnn-benchmark[qiskit,dev]",
]

[project.scripts]
bqnn-sweep = "experiments.exp_sweep_a:main"
bqnn-mnist = "experiments.train_mnist_bqnn:main"
bqnn-noise = "experiments.exp_noise_threshold:main"

bqnn-run-sweep = "experiments.run_sweep:main"

[project.urls]
Homepage = "https://github.com/example/bqnn-benchmark"
Documentation = "https://github.com/example/bqnn-benchmark#readme"
Repository = "https://github.com/example/bqnn-benchmark"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bqnn*", "experiments*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
